Commit da aula do dia 03/03/2020

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Aulas de BootStrap</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/adriano-castro.css">
+    <link rel="stylesheet" href="libs/materialDesign/css/materialdesignicons.css">
 </head>
 
 <body>
@@ -14,6 +15,33 @@
     <div class="jumbotron jumbotron-fluid bg-title">
         <h1 class="display-4 text-title text-center">adrianoCastro</h1>
         <p class="lead text-subtitle text-center">Curso de Técnico em Desenvolvimento de Sistemas</p>
+    </div>
+
+    <!-- Criando um footer -->
+    <div class="container-fluid bg-footer">
+        <div class="row">
+            <div class="offset-md-2 col-md-3 col-12">
+                <p class="text-white">
+                    Todos os direitos reservados.
+                    <br>adrianoCastro \oo/
+                </p>
+            </div>
+            <div class="col-md-3 col-12 text-white">
+                <p>Mapa do site</p>
+                <ul>
+                    <li>Home</li>
+                    <li>Quem Somos</li>
+                    <li>Cursos</li>
+                    <li>Fale Conosco</li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-12 text-white">
+                <i class="mdi mdi-facebook mdi-24px"></i>/adrianooliveiracastro <br>
+                <i class="mdi mdi-instagram mdi-24px"></i>/ao.castro <br>
+                <i class="mdi mdi-whatsapp mdi-24px"></i> (14) 99725-6991 <br>
+                <i class="mdi mdi-email mdi-24px"></i> adriano.castro2@etec.sp.gov.br
+            </div>
+        </div>
     </div>
 
     <script src="js/jquery-3.4.1.js"></script>
