Commit aula 06/03/2020 - Material Icon + CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aulas de BootStrap</title>
+    <link rel="shortcut icon" href="img/internet.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/adriano-castro.css">
     <link rel="stylesheet" href="libs/materialDesign/css/materialdesignicons.css">
@@ -14,11 +15,16 @@
 
     <div class="jumbotron jumbotron-fluid bg-title">
         <h1 class="display-4 text-title text-center">adrianoCastro</h1>
-        <p class="lead text-subtitle text-center">Curso de Técnico em Desenvolvimento de Sistemas</p>
+        <p class="lead text-subtitle text-center">
+            <i class="mdi mdi-settings-transfer"></i>
+            Curso de Técnico em Desenvolvimento de Sistemas
+        </p>
     </div>
 
-    <!-- Criando um footer -->
-    <div class="container-fluid bg-footer">
+    <i class="mdi mdi-instagram mdi-adriano"></i>
+
+     <!-- Criando um footer -->
+     <div class="container-fluid bg-footer">
         <div class="row">
             <div class="offset-md-2 col-md-3 col-12">
                 <p class="text-white">
@@ -44,7 +50,8 @@
         </div>
     </div>
 
-    <script src="js/jquery-3.4.1.js"></script>
+
+       <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.js"></script>
 </body>
 
