--- a/index.html
+++ b/index.html
@@ -16,15 +16,31 @@
     <div class="jumbotron jumbotron-fluid bg-title">
         <h1 class="display-4 text-title text-center">adrianoCastro</h1>
         <p class="lead text-subtitle text-center">
-            <i class="mdi mdi-settings-transfer"></i>
-            Curso de Técnico em Desenvolvimento de Sistemas
+            <i class="mdi mdi-settings-transfer"></i> Curso de Técnico em Desenvolvimento de Sistemas
         </p>
     </div>
 
-    <i class="mdi mdi-instagram mdi-adriano"></i>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-nav mt-n5">
+        <a class="navbar-brand d-md-none text-white">Integrado</a>
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Item 1 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Item 2</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-     <!-- Criando um footer -->
-     <div class="container-fluid bg-footer">
+    <br><br><br><br><br><br>
+
+    <!-- Criando um footer -->
+    <div class="container-fluid bg-footer">
         <div class="row">
             <div class="offset-md-2 col-md-3 col-12">
                 <p class="text-white">
@@ -51,7 +67,7 @@
     </div>
 
 
-       <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
     <script src="js/bootstrap.js"></script>
 </body>
 
