--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
         </p>
     </div>
 
+    <!-- b-navbar -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-nav mt-n5">
-        <a class="navbar-brand d-md-none text-white">Integrado</a>
+        <a class="navbar-brand" href="index.html">Integrado</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon text-white"></span>
         </button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Item 1 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Item 2</a>
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Item 2</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br>
 
     <!-- Criando um footer -->
     <div class="container-fluid bg-footer">
