--- a/index.html
+++ b/index.html
@@ -41,32 +41,69 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-white" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Item 2</a>
+                    <a class="nav-link text-white" href="#">Quem Somos?</a>
                 </li>
                 <!-- Início do menu dropdown -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Cursos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Ação</a>
-                        <a class="dropdown-item" href="#">Outra ação</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Algo mais aqui</a>
+                        <a class="dropdown-item" href="#">Designer Gráfico</a>
+                        <a class="dropdown-item" href="#">Programador Web</a>
                     </div>
                 </li>
                 <!-- Fim do menu dropdown -->
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Fale Conosco</a>
+                </li>
             </ul>
         </div>
     </nav>
 
-    <br><br><br><br><br><br><br>
+    <!-- Iniciando o conteúdo do nosso site -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-8 col-12">
+                <h5 class="border-bottom border-white text-white text-span ml-2 mt-2">NOTÍCIA PRINCIPAL</h5>
+                <img src="img/26-9-2018-g-web.jpg" alt="Notícia Principal" class="img-fluid">
+                <h1 class="text-center text-white mt-n5">
+                    <a href="" class="text-white">Curso de Programação WEB</a>
+                </h1>
+            </div>
+            <div class="col-md-4 col-12">
+                <h6 class="border-bottom border-white text-white text-span ml-2 mt-2">NOTÍCIA</h6>
+                <img class="img-fluid" src="img/blur-1853305_1920.jpg" alt="Notícia">
+                <h3 class="text-center text-white mt-n5">Curso de CSS 3</h3>
+
+                <h6 class="border-bottom border-white text-white text-span ml-2 mt-4">NOTÍCIA</h6>
+                <img class="img-fluid mt-3" src="img/photo-maik-jonietz-535261-unsplash.jpg" alt="Notícia">
+                <h3 class="text-center text-white mt-n5">Curso de CSS 3 Avançado</h3>
+            </div>
+        </div>
+        <!-- Conteúdos do site [secundários] -->
+        <div class="row mt-3">
+            <div class="col-md-9 col-12 text-justify">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, nam at. Soluta ea perspiciatis illo explicabo magnam, fugit possimus esse deserunt dolorum, accusamus officia voluptas ipsa facere provident maxime laborum. Nesciunt cupiditate quibusdam
+                eaque incidunt quod voluptatibus minus ullam pariatur corporis earum reprehenderit consequuntur tempore similique, quia voluptatum iure dolorum placeat amet cum architecto animi dolorem molestias quasi? Sunt, inventore. Repellendus numquam
+                consequatur similique at quos deleniti ad aliquid, suscipit obcaecati nam fugit molestiae libero atque dolorem vel sapiente. Quisquam, quam. Repellendus sapiente vel delectus sit quas tempora earum atque? Suscipit ducimus, cumque quibusdam
+                omnis animi numquam totam odio dolores voluptate ad quasi doloremque, praesentium nam minus? Ex, voluptatibus consequatur recusandae officiis quam iste cupiditate, a ullam, voluptate repellat labore. Odit tenetur nam perferendis quaerat
+                asperiores laboriosam molestias eos eaque quam quia voluptatum consectetur, magnam expedita rerum repudiandae incidunt praesentium laborum nemo, ea excepturi non culpa omnis modi dolore. Est.
+            </div>
+            <div class="col-md-3 col-12">
+                <div id="cont_371c4b9623f711164226b7b71d78eb78">
+                    <script type="text/javascript" async src="https://www.tempo.com/wid_loader/371c4b9623f711164226b7b71d78eb78"></script>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fim do conteúdo do nosso site -->
 
     <!-- Criando um footer -->
-    <div class="container-fluid bg-footer">
+    <div class="container-fluid bg-footer mt-5">
         <div class="row">
             <div class="offset-md-2 col-md-3 col-12">
                 <p class="text-white">
