Commit da aula do dia 01-06-2020

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link text-white" href="#"><b>Home</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Quem Somos?</a>
+                    <a class="nav-link text-white" href="sobre.html">Quem Somos?</a>
                 </li>
                 <!-- Início do menu dropdown -->
                 <li class="nav-item dropdown">
@@ -43,7 +43,7 @@
                         Cursos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Designer Gráfico</a>
+                        <a class="dropdown-item" href="designer.html">Designer Gráfico</a>
                         <a class="dropdown-item" href="#">Programador Web</a>
                     </div>
                 </li>
@@ -106,7 +106,9 @@
                 <p>Mapa do site</p>
                 <ul>
                     <li><b>Home</b></li>
-                    <li>Quem Somos</li>
+                    <li>
+                        <a href="sobre.html">Fale Conosco</a>
+                    </li>
                     <li>Cursos</li>
                     <li>
                         <a href="faleConosco.html"></a>Fale Conosco</a>
