--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Início da visualização do cabeçalho -->
-    <div class="jumbotron jumbotron-fluid bg-contato">
+    <div class="jumbotron jumbotron-fluid bg-sobre">
         <h1 class="display-4 text-title text-center">adrianoCastro</h1>
         <p class="lead text-subtitle text-center">
             <i class="mdi mdi-settings-transfer"></i> Curso de Técnico em Desenvolvimento de Sistemas
@@ -23,7 +23,6 @@
     <!-- Fim da visualização do cabeçalho -->
 
     <!-- b-navbar -->
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-nav mt-n5">
         <a class="navbar-brand d-block d-sm-none" href="index.html">Integrado</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,57 +57,35 @@
     <!-- Iniciando o conteúdo do nosso site -->
 
     <div class="container mt-3">
-        <div class="row">
-            <div class="col-md-6 d-none d-sm-block mt-5">
-                <img class="img-fluid" src="img/faleconosco2.png" alt="Fale Conosco">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-5 text-right d-none d-sm-block">
+                <span class="year text-primary">1994</span>
             </div>
-            <div class=" col-md-6 col-12">
-                <h1 class="text-center text-primary">Fale Conosco</h1>
-                <form action="" class="mt-2">
-                    <div class="form-group">
-                        <label>Nome completo</label>
-                        <input type="text" name="" id="" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label>E-mail</label>
-                        <input type="email" name="" id="" class="form-control">
-                    </div>
-                    <div class="form-group row">
-                        <div class="col-md-6 col-12">
-                            <label>Telefone</label>
-                            <input type="tel" name="" id="" class="form-control">
-                        </div>
-                        <div class="col-md-6 col-12">
-                            <label>Celular</label>
-                            <input type="tel" name="" id="" class="form-control">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label>Assunto</label>
-                        <select name="" id="" class="form-control">
-                            <option value="">Selecione o seu assunto...</option>
-                            <option value="">Ajuda</option>
-                            <option value="">Sugestões</option>
-                            <option value="">Críticas</option>
-                            <option value="">Elogios</option>
-                            <option value="">Reclamação</option>
-                            <option value="">Outros</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label>Mensagem</label>
-                        <textarea name="" id="" class="form-control" cols="20" rows="10"></textarea>
-                    </div>
-                    <div class="form-group row justify-content-end">
-                        <div class="col-md-4 col-6">
-                            <button class="btn btn-outline-primary btn-block"><i class="mdi mdi-mail"></i> Enviar</button>
-                        </div>
-                    </div>
-                </form>
+            <div class="col-md-1 d-none d-sm-block">
+                <i class="mdi mdi-shield-star text-primary icon-sobre"></i>
+            </div>
+            <div class="col-md-5 col-12">
+                <p class="text-justify text-primary">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sunt incidunt earum modi? Quisquam libero natus itaque eveniet, eum aspernatur veritatis autem quaerat explicabo corporis officiis. Optio et cupiditate laborum. Lorem ipsum dolor sit
+                    amet consectetur, adipisicing elit. Voluptatibus eligendi saepe voluptas vero aliquid vitae at pariatur velit ducimus repellat repellendus quisquam laborum dolor perferendis veritatis dolores reiciendis, voluptatem molestias?
+                </p>
+            </div>
+        </div>
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-5 col-12">
+                <p class="text-justify text-primary">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sunt incidunt earum modi? Quisquam libero natus itaque eveniet, eum aspernatur veritatis autem quaerat explicabo corporis officiis. Optio et cupiditate laborum. Lorem ipsum dolor sit
+                    amet consectetur, adipisicing elit. Voluptatibus eligendi saepe voluptas vero aliquid vitae at pariatur velit ducimus repellat repellendus quisquam laborum dolor perferendis veritatis dolores reiciendis, voluptatem molestias?
+                </p>
+            </div>
+            <div class="col-md-1 d-none d-sm-block">
+                <i class="mdi mdi-access-point-network text-primary icon-sobre"></i>
+            </div>
+            <div class="col-md-5 text-left d-none d-sm-block">
+                <span class="year text-primary">1998</span>
             </div>
         </div>
     </div>
-
 
     <!-- Fim do conteúdo do nosso site -->
 
@@ -125,9 +102,9 @@
                 <p>Mapa do site</p>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Quem Somos?</a></li>
+                    <li><b>Quem Somos</b></li>
                     <li>Cursos</li>
-                    <li><b>Fale Conosco</b></li>
+                    <li><a href="faleConosco.html">Fale Conosco</a></li>
                 </ul>
             </div>
             <div class="col-md-3 col-12 text-white">
