Aula do dia 08-06-2020

--- a/desenvolvedor.html
+++ b/desenvolvedor.html
@@ -75,8 +75,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="designer.html">Designer Gráfico</a>
-                        <a class="dropdown-item" href="programador.html">Programador Web</a>
-                        <a class="dropdown-item" href="desenvolvedor.html">Desenvolvedor</a>
+                        <a class="dropdown-item" href="#">Programador Web</a>
                     </div>
                 </li>
                 <!-- Fim do menu dropdown -->
@@ -87,51 +86,67 @@
         </div>
     </nav>
 
-    <!-- Iniciando o conteúdo do nosso site -->
-
+    <!-- Iniciando o conteúdo da página -->
     <div class="container mt-3">
         <div class="row">
             <div class="col-12">
-                <img src="img/blur-1853305_1920.jpg" alt="01" class="img-fluid rounded">
-                <h1 class="text-danger">Curso de Designer Gráfico</h1>
-                <p class="text-justify">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo libero omnis blanditiis odio vel veniam ea obcaecati delectus necessitatibus labore quisquam vero repellendus, deleniti nisi sit laborum est ad voluptas. Accusamus aut natus distinctio modi,
-                    laborum similique veritatis harum deleniti minus repellendus rerum exercitationem neque culpa eum, quae velit eaque! Eligendi rerum illum blanditiis saepe cupiditate quis quisquam magnam nesciunt! Porro distinctio voluptates, id commodi
-                    dignissimos in nostrum dolore quibusdam harum, voluptas sit ducimus inventore minima cupiditate ea corporis tempore nihil adipisci aliquid odit provident! Id facilis amet eligendi adipisci.
-                </p>
-                <button class="btn btn-primary" data-toggle="modal" data-target="#curso">Ver grade do curso</button>
+                <h1 class="text-center text-danger">
+                    Curso de Desenvolvedor de Aplicações
+                </h1>
             </div>
         </div>
-    </div>
-
-    <!-- Fim do conteúdo do nosso site -->
-
-    <!-- Nossa janela modal -->
-    <div id="curso" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-danger" id="my-modal-title">Curso de Designer Gráfico</h5>
-                    <button class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem eum accusantium enim dignissimos et nemo quis perferendis atque repellat! Magni omnis architecto vel aut aliquid, repellendus corporis nostrum ad eligendi.</div>
-                        <div class="col-6">Facere, provident nisi! Corporis vitae architecto ut in, repellendus, fugiat consequatur aperiam laudantium, minima quasi praesentium ducimus quam necessitatibus earum. Ratione, vel unde. Voluptatibus nihil sunt veniam labore voluptate
-                            aspernatur.
-                        </div>
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-4 mt-3 mt-sm-2 mt-md-0">
+                <div class="card border-primary">
+                    <div class="card-header bg-primary">
+                        <h5 class="text-white">Programador Front-End</h5>
+                    </div>
+                    <img src="img/front-end.jpg" alt="Front-End" class="card-img-top img-card">
+                    <div class="card-body">
+                        <p class="card-text text-justify">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum iusto asperiores, blanditiis sed eos maiores, dignissimos id ut officiis fugiat sunt. Vel laboriosam autem saepe aliquam mollitia debitis necessitatibus animi!
+                        </p>
+                    </div>
+                    <div class="card-footer bg-primary">
+                        <button class="btn btn-outline-light btn-block"><i class="mdi mdi-plus-circle"></i> Saiba mais...</button>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" data-dismiss="modal"><i class="mdi mdi-close-circle"></i> Fechar</button>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 mt-3 mt-sm-2 mt-md-0">
+                <div class="card border-info">
+                    <div class="card-header bg-info">
+                        <h5 class="text-white">Programador Back-End</h5>
+                    </div>
+                    <img src="img/back-end.jpg" alt="Front-End" class="card-img-top img-card">
+                    <div class="card-body">
+                        <p class="card-text text-justify">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum iusto asperiores, blanditiis sed eos maiores, dignissimos id ut officiis fugiat sunt. Vel laboriosam autem saepe aliquam mollitia debitis necessitatibus animi!
+                        </p>
+                    </div>
+                    <div class="card-footer bg-info">
+                        <button class="btn btn-outline-light btn-block"><i class="mdi mdi-plus-circle"></i> Saiba mais...</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 mt-3 mt-sm-2 mt-md-0">
+                <div class="card border-danger">
+                    <div class="card-header bg-danger">
+                        <h5 class="text-white">Programador Full-Stack</h5>
+                    </div>
+                    <img src="img/full-stack.png" alt="Full-Stack" class="card-img-top img-card">
+                    <div class="card-body">
+                        <p class="card-text text-justify">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum iusto asperiores, blanditiis sed eos maiores, dignissimos id ut officiis fugiat sunt. Vel laboriosam autem saepe aliquam mollitia debitis necessitatibus animi!
+                        </p>
+                    </div>
+                    <div class="card-footer bg-danger">
+                        <button class="btn btn-outline-light btn-block"><i class="mdi mdi-plus-circle"></i> Saiba mais...</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Fim da nossa janela modal -->
-
+    <!-- Fim do conteúdo da página -->
 
     <!-- Criando um footer -->
     <div class="container-fluid bg-footer mt-5">
