--- a/faleConosco.html
+++ b/faleConosco.html
@@ -44,18 +44,19 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="designer.html">Designer Gráfico</a>
-                        <a class="dropdown-item" href="#">Programador Web</a>
+                        <a class="dropdown-item" href="programador.html">Programador Web</a>
+                        <a class="dropdown-item" href="desenvolvedor.html">Desenvolvedor</a>
                     </div>
                 </li>
                 <!-- Fim do menu dropdown -->
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><b>Fale Conosco</b></a>
+                    <a class="nav-link text-white" href="faleConosco.html"><b>Fale Conosco</b></a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Iniciando o conteúdo do nosso site -->
+
 
     <div class="container mt-3">
         <div class="row">
