--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="designer.html">Designer Gráfico</a>
-                        <a class="dropdown-item" href="#">Programador Web</a>
+                        <a class="dropdown-item" href="programador.html">Programador Web</a>
+                        <a class="dropdown-item" href="desenvolvedor.html">Desenvolvedor</a>
                     </div>
                 </li>
                 <!-- Fim do menu dropdown -->
