--- a/programador.html
+++ b/programador.html
@@ -87,51 +87,62 @@
         </div>
     </nav>
 
-    <!-- Iniciando o conteúdo do nosso site -->
-
+    <!-- Iniciando o conteúdo da página -->
     <div class="container mt-3">
         <div class="row">
             <div class="col-12">
-                <img src="img/blur-1853305_1920.jpg" alt="01" class="img-fluid rounded">
-                <h1 class="text-danger">Curso de Designer Gráfico</h1>
-                <p class="text-justify">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo libero omnis blanditiis odio vel veniam ea obcaecati delectus necessitatibus labore quisquam vero repellendus, deleniti nisi sit laborum est ad voluptas. Accusamus aut natus distinctio modi,
-                    laborum similique veritatis harum deleniti minus repellendus rerum exercitationem neque culpa eum, quae velit eaque! Eligendi rerum illum blanditiis saepe cupiditate quis quisquam magnam nesciunt! Porro distinctio voluptates, id commodi
-                    dignissimos in nostrum dolore quibusdam harum, voluptas sit ducimus inventore minima cupiditate ea corporis tempore nihil adipisci aliquid odit provident! Id facilis amet eligendi adipisci.
-                </p>
-                <button class="btn btn-primary" data-toggle="modal" data-target="#curso">Ver grade do curso</button>
+                <h1 class="text-center text-danger">
+                    Curso de Programador Web
+                </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Conteúdo</th>
+                                <th scope="col" class="text-center">Estagiário</th>
+                                <th scope="col" class="text-center">Júnior</th>
+                                <th scope="col" class="text-center">Sênior</th>
+                                <th scope="col" class="text-center">Pleno</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td scope="row">Lógica de Programação</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Programação Web</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Programação de Microserviço</td>
+                                <td class="text-center">NÃO</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                                <td class="text-center">SIM</td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <th colspan="5">As especificações acima refere-se aos cursos.</th>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-
-    <!-- Fim do conteúdo do nosso site -->
-
-    <!-- Nossa janela modal -->
-    <div id="curso" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-danger" id="my-modal-title">Curso de Designer Gráfico</h5>
-                    <button class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem eum accusantium enim dignissimos et nemo quis perferendis atque repellat! Magni omnis architecto vel aut aliquid, repellendus corporis nostrum ad eligendi.</div>
-                        <div class="col-6">Facere, provident nisi! Corporis vitae architecto ut in, repellendus, fugiat consequatur aperiam laudantium, minima quasi praesentium ducimus quam necessitatibus earum. Ratione, vel unde. Voluptatibus nihil sunt veniam labore voluptate
-                            aspernatur.
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" data-dismiss="modal"><i class="mdi mdi-close-circle"></i> Fechar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Fim da nossa janela modal -->
-
+    <!-- Fim do conteúdo da página -->
 
     <!-- Criando um footer -->
     <div class="container-fluid bg-footer mt-5">
